--- a/Gateway/Headquarter/App.config
+++ b/Gateway/Headquarter/App.config
@@ -7,38 +7,30 @@
     <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
   </configSections>
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
-  <!--Audit Configuration has been moved from UnicastBusConfig to AuditConfig. 
-  <AuditConfig QueueName="The address to which messages received will be forwarded."
-    OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  /> -->
   <AuditConfig QueueName="audit" />
   <GatewayConfig>
     <Sites>
       <Site Key="SiteA" Address="http://localhost:25899/SiteA/" ChannelType="Http" />
-      <!-- Legacy mode means that messages sent to SiteB as well as any replies from SiteB back to Headquarter will use the new forwarder (IForwardMessagesToSites), legacy mode is enabled by default so we are compatible with endpoints prior to v4.1 -->
       <Site Key="SiteB" Address="http://localhost:25899/SiteB/" ChannelType="Http" LegacyMode="false" />
     </Sites>
     <Channels>
       <Channel Address="http://localhost:25899/Headquarter/" ChannelType="Http" />
-      <!-- The default channel is the channel that will be set as return address. This means that any replies will come back on this channel-->
       <Channel Address="http://localhost:25899/Headquarter2/" ChannelType="Http" Default="true" />
     </Channels>
   </GatewayConfig>
-  <!--<UnicastBusConfig 
-    DistributorControlAddress="The address for sending control messages to the distributor."
-    DistributorDataAddress="The distributor's data address, used as the return address of messages sent by this endpoint."
-    TimeoutManagerAddress="The address that the timeout manager will use to send and receive messages." >
-    <MessageEndpointMappings>
-      To register all message types defined in an assembly:
-      <add Assembly="assembly" Endpoint="queue@machinename" />
-      
-      To register all message types defined in an assembly with a specific namespace (it does not include sub namespaces):
-      <add Assembly="assembly" Namespace="namespace" Endpoint="queue@machinename" />
-      
-      To register a specific type in an assembly:
-      <add Assembly="assembly" Type="type fullname (http://msdn.microsoft.com/en-us/library/system.type.fullname.aspx)" Endpoint="queue@machinename" />
-    </MessageEndpointMappings>
-  </UnicastBusConfig>-->
   <UnicastBusConfig>
     <MessageEndpointMappings />
   </UnicastBusConfig>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="NServiceBus" publicKeyToken="9fc386479f8a226c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NServiceBus.Core" publicKeyToken="9fc386479f8a226c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
