also set start action in release

--- a/VideoStore.Msmq/VideoStore.ContentManagement/VideoStore.ContentManagement.csproj
+++ b/VideoStore.Msmq/VideoStore.ContentManagement/VideoStore.ContentManagement.csproj
@@ -83,7 +83,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets">
   </Import>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+  <PropertyGroup>
     <StartAction>Program</StartAction>
     <StartProgram>$(ProjectDir)$(OutputPath)NServiceBus.Host.exe</StartProgram>
   </PropertyGroup>
