--- a/Gateway/SiteB/App.config
+++ b/Gateway/SiteB/App.config
@@ -12,4 +12,4 @@
   </GatewayConfig>
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error"/>
   <AuditConfig QueueName="audit"/>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+</configuration>
