--- a/ScaleOut/Orders.Handler.Worker2/Orders.Handler.Worker2.csproj
+++ b/ScaleOut/Orders.Handler.Worker2/Orders.Handler.Worker2.csproj
@@ -38,7 +38,7 @@
     </Reference>
     <Reference Include="NServiceBus.Distributor.MSMQ, Version=5.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\NServiceBus.Distributor.MSMQ.5.0.0-beta0001\lib\net45\NServiceBus.Distributor.MSMQ.dll</HintPath>
+      <HintPath>..\packages\NServiceBus.Distributor.MSMQ.5.0.0\lib\net45\NServiceBus.Distributor.MSMQ.dll</HintPath>
     </Reference>
     <Reference Include="NServiceBus.Host, Version=5.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
