--- a/ScaleOut/Orders.Handler/Orders.Handler.csproj
+++ b/ScaleOut/Orders.Handler/Orders.Handler.csproj
@@ -36,8 +36,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NServiceBus.5.0.0\lib\net45\NServiceBus.Core.dll</HintPath>
     </Reference>
-    <Reference Include="NServiceBus.Distributor.MSMQ">
-      <HintPath>..\packages\NServiceBus.Distributor.MSMQ.5.0.0-beta0001\lib\net45\NServiceBus.Distributor.MSMQ.dll</HintPath>
+    <Reference Include="NServiceBus.Distributor.MSMQ, Version=5.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NServiceBus.Distributor.MSMQ.5.0.0\lib\net45\NServiceBus.Distributor.MSMQ.dll</HintPath>
     </Reference>
     <Reference Include="NServiceBus.Host, Version=5.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
