--- a/Unobtrusive/SharedConventions/SharedConventions.csproj
+++ b/Unobtrusive/SharedConventions/SharedConventions.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SharedConventions.cs" />
+    <Compile Include="ConventionExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
