--- a/Gateway/SiteA/SiteA.csproj
+++ b/Gateway/SiteA/SiteA.csproj
@@ -67,6 +67,6 @@
   <PropertyGroup>
     <StartAction>Program</StartAction>
     <StartProgram>$(ProjectDir)$(OutputPath)NServiceBus.Host.exe</StartProgram>
-    <StartArguments>NServiceBus.Lite NServiceBus.MultiSite</StartArguments>
+    <StartArguments>NServiceBus.Lite</StartArguments>
   </PropertyGroup>
 </Project>
